Remove duplicate mention of Kibana

--- a/_layouts/carousel.html
+++ b/_layouts/carousel.html
@@ -108,7 +108,7 @@
             A minimal installation of Alerta can be deployed quickly and easily
             extended as monitoring requirements and confidence grow. There are
             integrations available with Riemann, Nagios, Zabbix, Kibana, Sensu,
-            Kibana, Pingdom and Cloudwatch. Integrating bespoke systems is easy
+            Pingdom and Cloudwatch. Integrating bespoke systems is easy
             using the API or command-line tool.</p>
           <p><a class="btn btn-default" href="http://try.alerta.io" role="button">Try it now &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
