--- a/_layouts/x-default.html
+++ b/_layouts/x-default.html
@@ -107,7 +107,7 @@
         </div>
 
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014-2017 Nick Satterly &middot; <a href="http://ec.europa.eu/justice/data-protection/">Privacy</a> &middot; <a href="http://www.apache.org/licenses/LICENSE-2.0.html">License</a></p>
+        <p>&copy; 2014-2017 Nick Satterly &middot; This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.</p>
       </footer>
 
     </div><!-- /.container -->
