Update license text

--- a/_layouts/carousel.html
+++ b/_layouts/carousel.html
@@ -223,7 +223,7 @@
         </div>
 
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014-2017 Nick Satterly &middot; This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.</p>
+        <p>&copy; 2014-2017 Nick Satterly &middot; Creative Commons BY-SA 4.0 License.</p>
       </footer>
 
     </div><!-- /.container -->
