Update internal links

--- a/_layouts/x-default.html
+++ b/_layouts/x-default.html
@@ -46,7 +46,7 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="http://alerta.io">Home</a></li>
+                <li class="active"><a href="https://alerta.io">Home</a></li>
                 <li><a href="http://docs.alerta.io">Documentation</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Develop <span class="caret"></span></a>
