Remove references to OpenShift

--- a/_layouts/carousel.html
+++ b/_layouts/carousel.html
@@ -100,7 +100,6 @@
                     <li><a href="https://github.com/alerta/packer-templates">Packer</a></li>
                     <li><a href="https://github.com/alerta/heroku-api-alerta">Heroku</a></li>
                     <li><a href="https://pypi.python.org/pypi/alerta-server">Python PyPI</a></li>
-                    <li><a href="https://github.com/alerta/openshift-try-alerta">RedHat OpenShift</a></li>
                     <li><a href="https://github.com/alerta/vagrant-try-alerta">Vagrant</a></li>
                   </ul>
                 </li>
@@ -150,7 +149,7 @@
         <div class="col-lg-4">
           <i class="fa fa-download fa-5x"></i>
           <h2>Deploy It!</h2>
-          <p>There are standard deployments to AWS EC2, Vagrant, RedHat OpenShift,
+          <p>There are standard deployments to AWS EC2, Vagrant, Kubernetes,
             Packer, Docker and Heroku available to get you going in minutes. Other
             more complex deployments make use of standard Python package install
             techniques.</p>
