Update integrations menu

--- a/_layouts/carousel.html
+++ b/_layouts/carousel.html
@@ -66,8 +66,10 @@
                     <li><a href="https://github.com/alerta/riemann-alerta">Riemann</a></li>
                     <li><a href="https://github.com/alerta/sensu-alerta">Sensu</a></li>
                     <li><a href="https://github.com/alerta/kibana-alerta">Kibana</a></li>
+                    <li><a href="https://github.com/firehol/netdata/wiki/Alerta-monitoring-system">netdata</a></li>
                     <li><a href="https://github.com/alerta/prometheus-config">Prometheus</a></li>
                     <li><a href="https://docs.influxdata.com/kapacitor/latest/nodes/alert_node/#alerta">InfluxDB Kapacitor</a></li>
+                    <li><a href="https://elastalert.readthedocs.io/en/latest/ruletypes.html#alerta">ElastAlert</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">Webhooks</li>
                     <li><a href="http://docs.alerta.io/en/latest/integrations.html#cloudwatch">AWS Cloudwatch</a></li>
