Update web UI link and more integrations

--- a/_layouts/carousel.html
+++ b/_layouts/carousel.html
@@ -52,7 +52,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Components <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
                     <li><a href="http://docs.alerta.io/en/latest/server.html">Alerta API</a></li>
-                    <li><a href="https://github.com/alerta/angular-alerta-webui">Web UI</a></li>
+                    <li><a href="https://github.com/alerta/alerta-webui">Web UI</a></li>
                     <li><a href="https://github.com/alerta/python-alerta">CLI &amp; Python SDK</a></li>
                   </ul>
                 </li>
@@ -133,8 +133,8 @@
             scalable solution when it comes to monitoring and alert visualisation.
             A minimal installation of Alerta can be deployed quickly and easily
             extended as monitoring requirements and confidence grow. There are
-            integrations available with Riemann, Nagios, Zabbix, Kibana, Sensu,
-            Pingdom and Cloudwatch. Integrating bespoke systems is easy
+            integrations available with Prometheus, Riemann, Nagios, Zabbix, netdata,
+            Sensu, Pingdom and Cloudwatch. Integrating bespoke systems is easy
             using the API or command-line tool.</p>
           <p><a class="btn btn-default" href="http://try.alerta.io" role="button">Try it now &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
@@ -167,11 +167,11 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">All the alerts. <span class="text-muted">Not just the easy ones.</span></h2>
-          <p class="lead">Alerta accepts alerts from the standard sources like
-            Syslog, SNMP, Nagios, Zabbix and Sensu. Any monitoring tool that can
-            trigger a URL request can be integrated easily. Anything that can be
-            scripted can also send alerts using the command-line tool. There is
-            already a Python SDK and other SDKs are in the pipeline. Cool.</p>
+          <p class="lead">Alerta accepts alerts from the standard sources like Syslog,
+            SNMP, Prometheus, Nagios, Zabbix, Sensu and netdata. Any monitoring
+            tool that can trigger a URL request can be integrated easily. Anything
+            that can be scripted can also send alerts using the command-line tool.
+            There is already a Python SDK and other SDKs are in the pipeline. Cool.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="/assets/images/console-004.png" alt="Generic placeholder image">
