--- a/_layouts/carousel.html
+++ b/_layouts/carousel.html
@@ -131,7 +131,7 @@
           <!-- img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;" -->
           <i class="fa fa-dashboard fa-5x img-circle"></i>
           <h2>Why alerta?</h2>
-          <p>Email was not designed to be used as an alert console. It is not a
+          <p class="lead">Email was not designed to be used as an alert console. It is not a
             scalable solution when it comes to monitoring and alert visualisation.
             A minimal installation of Alerta can be deployed quickly and easily
             extended as monitoring requirements and confidence grow. There are
@@ -143,7 +143,7 @@
         <div class="col-lg-4">
           <i class="fa fa-wrench fa-5x"></i>
           <h2>Alert API</h2>
-          <p>Alerts are submitted in JSON-format to an HTTP API. Alerts can be
+          <p class="lead">Alerts are submitted in JSON-format to an HTTP API. Alerts can be
             queried from the command-line or viewed in a slick web console
             optimized for desktop, tablet and mobile. User logins can be added
             using Google, GitHub or GitLab OAuth and programatic access is managed
@@ -153,7 +153,7 @@
         <div class="col-lg-4">
           <i class="fa fa-download fa-5x"></i>
           <h2>Deploy It!</h2>
-          <p>There are standard deployments to AWS EC2, Vagrant, Kubernetes,
+          <p class="lead">There are standard deployments to AWS EC2, Vagrant, Kubernetes,
             Packer, Docker and Heroku available to get you going in minutes. Other
             more complex deployments make use of standard Python package install
             techniques.</p>
