Add jumbotron at bottom

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,10 @@
     <div class="container marketing">
       {% include marketing.html %}
       {% include featurettes.html %}
+      {% include jumbotron.html %}
       {% include footer.html %}
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    {% include js.html %}
     {% include analytics.html %}
   </body>
 </html>
