--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -1,4 +1,4 @@
 <div class="jumbotron text-center">
   <h2>Ready to take control of your monitoring?</h2>
-  <a class="btn btn-success btn-lg" href="https://docs.alerta.io/en/latest/quick-start.html" role="button">Get Started &raquo;</a>
+  <a class="btn btn-success btn-lg" href="https://docs.alerta.io/en/latest/quick-start.html" onclick="ga('send', 'event', 'Outbound Link', 'Get Started', event.target.href)" role="button">Get Started </a>
 </div>
