Use https for external links

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,11 +15,11 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="https://alerta.io">Home</a></li>
-            <li><a href="http://docs.alerta.io" onclick="ga('send', 'event', 'Outbound Link', 'docs', event.target.href)">Documentation</a></li>
+            <li><a href="https://docs.alerta.io" onclick="ga('send', 'event', 'Outbound Link', 'docs', event.target.href)">Documentation</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Components <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="http://docs.alerta.io/en/latest/server.html" onclick="ga('send', 'event', 'Outbound Link', 'API', event.target.href)">Alerta API</a></li>
+                <li><a href="https://docs.alerta.io/en/latest/server.html" onclick="ga('send', 'event', 'Outbound Link', 'API', event.target.href)">Alerta API</a></li>
                 <li><a href="https://github.com/alerta/alerta-webui" onclick="ga('send', 'event', 'Outbound Link', 'WebUI', event.target.href)">Web UI</a></li>
                 <li><a href="https://github.com/alerta/python-alerta" onclick="ga('send', 'event', 'Outbound Link', 'CLI', event.target.href)">CLI &amp; Python SDK</a></li>
               </ul>
@@ -40,18 +40,18 @@
                 <li><a href="https://elastalert.readthedocs.io/en/latest/ruletypes.html#alerta" onclick="ga('send', 'event', 'Outbound Link', 'ElastAlert', event.target.href)">ElastAlert</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">Webhooks</li>
-                <li><a href="http://docs.alerta.io/en/latest/integrations.html#cloudwatch" onclick="ga('send', 'event', 'Outbound Link', 'Cloudwatch', event.target.href)">AWS Cloudwatch</a></li>
-                <li><a href="http://docs.alerta.io/en/latest/integrations.html#grafana" onclick="ga('send', 'event', 'Outbound Link', 'Grafana', event.target.href)">Grafana</a></li>
-                <li><a href="http://docs.alerta.io/en/latest/integrations.html#graylog" onclick="ga('send', 'event', 'Outbound Link', 'Graylog', event.target.href)">Graylog</a></li>
-                <li><a href="http://docs.alerta.io/en/latest/integrations.html#newrelic onclick="ga('send', 'event', 'Outbound Link', 'NewRelic', event.target.href)"">New Relic</a></li>
-                <li><a href="http://docs.alerta.io/en/latest/integrations.html#pagerduty" onclick="ga('send', 'event', 'Outbound Link', 'PagerDuty', event.target.href)">PagerDuty</a></li>
-                <li><a href="http://docs.alerta.io/en/latest/integrations.html#pingdom" onclick="ga('send', 'event', 'Outbound Link', 'Pingdom', event.target.href)">Pingdom</a></li>
-                <li><a href="http://docs.alerta.io/en/latest/integrations.html#prometheus" onclick="ga('send', 'event', 'Outbound Link', 'Prometheus', event.target.href)">Prometheus</a></li>
-                <li><a href="http://docs.alerta.io/en/latest/integrations.html#riemann" onclick="ga('send', 'event', 'Outbound Link', 'Riemann', event.target.href)">Riemann</a></li>
-                <li><a href="http://docs.alerta.io/en/latest/integrations.html#serverdensity" onclick="ga('send', 'event', 'Outbound Link', 'ServerDensity', event.target.href)">SeverDensity</a></li>
-                <li><a href="http://docs.alerta.io/en/latest/integrations.html#slack" onclick="ga('send', 'event', 'Outbound Link', 'Slack', event.target.href)">Slack</a></li>
-                <li><a href="http://docs.alerta.io/en/latest/integrations.html#stackdriver" onclick="ga('send', 'event', 'Outbound Link', 'Stackdriver', event.target.href)">Google Stackdriver</a></li>
-                <li><a href="http://docs.alerta.io/en/latest/integrations.html#telegram" onclick="ga('send', 'event', 'Outbound Link', 'Telegram', event.target.href)">Telegram</a></li>
+                <li><a href="https://docs.alerta.io/en/latest/integrations.html#cloudwatch" onclick="ga('send', 'event', 'Outbound Link', 'Cloudwatch', event.target.href)">AWS Cloudwatch</a></li>
+                <li><a href="https://docs.alerta.io/en/latest/integrations.html#grafana" onclick="ga('send', 'event', 'Outbound Link', 'Grafana', event.target.href)">Grafana</a></li>
+                <li><a href="https://docs.alerta.io/en/latest/integrations.html#graylog" onclick="ga('send', 'event', 'Outbound Link', 'Graylog', event.target.href)">Graylog</a></li>
+                <li><a href="https://docs.alerta.io/en/latest/integrations.html#newrelic onclick="ga('send', 'event', 'Outbound Link', 'NewRelic', event.target.href)"">New Relic</a></li>
+                <li><a href="https://docs.alerta.io/en/latest/integrations.html#pagerduty" onclick="ga('send', 'event', 'Outbound Link', 'PagerDuty', event.target.href)">PagerDuty</a></li>
+                <li><a href="https://docs.alerta.io/en/latest/integrations.html#pingdom" onclick="ga('send', 'event', 'Outbound Link', 'Pingdom', event.target.href)">Pingdom</a></li>
+                <li><a href="https://docs.alerta.io/en/latest/integrations.html#prometheus" onclick="ga('send', 'event', 'Outbound Link', 'Prometheus', event.target.href)">Prometheus</a></li>
+                <li><a href="https://docs.alerta.io/en/latest/integrations.html#riemann" onclick="ga('send', 'event', 'Outbound Link', 'Riemann', event.target.href)">Riemann</a></li>
+                <li><a href="https://docs.alerta.io/en/latest/integrations.html#serverdensity" onclick="ga('send', 'event', 'Outbound Link', 'ServerDensity', event.target.href)">SeverDensity</a></li>
+                <li><a href="https://docs.alerta.io/en/latest/integrations.html#slack" onclick="ga('send', 'event', 'Outbound Link', 'Slack', event.target.href)">Slack</a></li>
+                <li><a href="https://docs.alerta.io/en/latest/integrations.html#stackdriver" onclick="ga('send', 'event', 'Outbound Link', 'Stackdriver', event.target.href)">Google Stackdriver</a></li>
+                <li><a href="https://docs.alerta.io/en/latest/integrations.html#telegram" onclick="ga('send', 'event', 'Outbound Link', 'Telegram', event.target.href)">Telegram</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">Plugins</li>
                 <li><a href="https://github.com/alerta/alerta-contrib/tree/master/plugins/amqp" onclick="ga('send', 'event', 'Outbound Link', 'Plugin AMQP', event.target.href)">AMQP</a></li>
@@ -74,7 +74,7 @@
               </ul>
             </li>
 
-            <li><a href="http://github.com/alerta/alerta" onclick="ga('send', 'event', 'Outbound Link', 'GitHub', event.target.href)">GitHub</a></li>
+            <li><a href="https://github.com/alerta/alerta" onclick="ga('send', 'event', 'Outbound Link', 'GitHub', event.target.href)">GitHub</a></li>
           </ul>
         </div>
       </div>
