Update component links

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,9 +19,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Components <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="https://docs.alerta.io/en/latest/server.html" onclick="ga('send', 'event', 'Outbound Link', 'API', event.target.href)">Alerta API</a></li>
-                <li><a href="https://github.com/alerta/alerta-webui" onclick="ga('send', 'event', 'Outbound Link', 'WebUI', event.target.href)">Web UI</a></li>
-                <li><a href="https://github.com/alerta/python-alerta" onclick="ga('send', 'event', 'Outbound Link', 'CLI', event.target.href)">CLI &amp; Python SDK</a></li>
+                <li><a href="https://github.com/alerta/alerta" onclick="ga('send', 'event', 'Outbound Link', 'Alerta API', event.target.href)">Alerta API</a></li>
+                <li><a href="https://github.com/alerta/alerta-webui" onclick="ga('send', 'event', 'Outbound Link', 'Web UI', event.target.href)">Web UI</a></li>
+                <li><a href="https://github.com/alerta/python-alerta-client" onclick="ga('send', 'event', 'Outbound Link', 'CLI & Python SDK', event.target.href)">CLI &amp; Python SDK</a></li>
               </ul>
             </li>
 
