Update GitHub link

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -74,7 +74,7 @@
               </ul>
             </li>
 
-            <li><a href="https://github.com/alerta/alerta" onclick="ga('send', 'event', 'Outbound Link', 'GitHub', event.target.href)">GitHub</a></li>
+            <li><a href="https://github.com/alerta" onclick="ga('send', 'event', 'Outbound Link', 'GitHub', event.target.href)">GitHub</a></li>
           </ul>
         </div>
       </div>
