Add Google adsense script to header

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,3 +25,5 @@
 <!-- Custom styles for this template -->
 <link href="/css/carousel.css" rel="stylesheet">
 <link href="/css/custom.css" rel="stylesheet">
+
+<script data-ad-client="ca-pub-1324564037457648" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
